# zemon

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: clock.rs  main.rs
