[package]
name = "zemon"
version = "0.3.1"
edition = "2024"
description = "A system monitor TUI application for zellij environment"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.38"
chrono = "0.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
